--- a/index.html
+++ b/index.html
@@ -200,6 +200,8 @@
 			<td>
 				<p>Appears randomly:</p>
 			</td>
+			<td id = "grassEaterCount"></td>
+			<td id = "weatherClint">Exanak</td>
 		</tr>
 
 
